feat: add api for update student and update the style
